--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I'm a Python developer with a passion for building AI-powered solutions that help businesses grow. I founded DeliveryByte to automate workflows for restaurants, and now I'm focused on bringing the power of automation to a wider range of SMBs and startups. I have experience in scaling operations (Reef Kitchens UK, 2-100+ locations), venture capital (SFC Capital), and building interactive data dashboards.
+            I'm a Python developer with a passion for building AI-powered solutions that help businesses grow. I bootsrapped <a href="deliverbyte.com" target="_blank">DeliveryByte</a>  to automate workflows for restaurants, and now I'm focused on bringing the power of automation to a wider range of SMBs and startups. I have experience in scaling operations (Reef Kitchens UK, 2-100+ locations), venture capital (SFC Capital), and building interactive data dashboards.
         </p>
         <p>
             When I'm not coding, you can find me playing tennis or hitting the drums.
@@ -26,12 +26,12 @@
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li>Python</li>
-            <li>LLMs (RunPod, Gemini API, Qwen)</li>
+            <li>Python (Flask/Django)</li>
+            <li>LLMs (local R1 14b, R1 API, Gemini API, Google Vision API Qwen2.5Max)</li>
             <li>Automation</li>
             <li>Data Analysis</li>
-            <li>Dashboards (Flask, Plotly)</li>
-            <li>HTML, CSS, JavaScript</li>
+            <li>Dashboards (Plotly, Matplot)</li>
+            <li>HTML</li>
             <li>Financial Modeling</li>
         </ul>
     </section>
