--- a/index.html
+++ b/index.html
@@ -24,17 +24,29 @@
     </section>
 
     <section id="skills">
-        <h2>Skills</h2>
+        <h2>My Skills</h2>
         <ul>
-            <li>Python (Flask/Django)</li>
-            <li>LLMs (local R1 14b, R1 API, Gemini API, Google Vision API Qwen2.5Max)</li>
-            <li>Automation</li>
+            <li>Python</li>
+            <li>LLMs (local DeepSeek-R1 14b, DeepSeek-R1 API, Gemini 2.0 Pro, Google Vision API, Qwen2.5Max)</li>
+            <li>Web Apps (Flask, Django, HTML)</li>
+            <li>Human-like Automations</li>
+            <li>Interactive Dashboards (Plotly, Matplot)</li>
             <li>Data Analysis</li>
-            <li>Dashboards (Plotly, Matplot)</li>
-            <li>HTML</li>
-            <li>Financial Modeling</li>
+            <li>Financial Modeling (early-stage startups, public equities)</li>
         </ul>
     </section>
+
+    <section id="stack">
+        <h2>My Stack</h2>
+        <ul>
+            <li>Mac OS</li>
+            <li>Visual Studio Code</li>
+            <li>Github</li>
+            <li>Heroku</li>
+            <li>Zoho email</li>
+            <li>Canva</li>
+        </ul>
+    </section>    
 
     <section id="portfolio">
         <h2>Portfolio</h2>
