--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             I'm a Python developer with a passion for building AI-powered solutions that help businesses grow. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a>  to automate workflows for restaurants, and now I'm focused on bringing the power of automation to a wider range of SMBs and startups. I have experience in scaling operations (Reef Kitchens UK, 2-100+ locations), venture capital (SFC Capital), and building interactive data dashboards.
         </p>
         <p>
-            When I'm not coding, you can find me playing tennis or hitting the drums.
+            When I'm not coding, you can find me playing tennis.
         </p>
     </section>
 
