--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I'm a Python developer with a passion for building AI-powered solutions that help businesses grow. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,500+/mo via LLM workflows), and now I'm focused on bringing the power of automation to a wider range of SMBs and startups. I have experience in scaling operations (Reef Kitchens UK, 2-100+ locations), venture capital (SFC Capital), and building interactive data dashboards.
+            I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital.
+        </p>
         </p>
         <p>
             When I'm not coding, you can find me playing tennis.
