--- a/index.html
+++ b/index.html
@@ -28,36 +28,33 @@
         <h2>My Skills</h2>
         <ul>
             <li>Python</li>
+            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama) & APIs (Gemini 2.0 Pro, Qwen2.5 Max)</li>
             <li>LLMs (local DeepSeek-R1 14b, DeepSeek-R1 API, Gemini 2.0 Pro, Google Vision API, Qwen2.5Max)</li>
             <li>Web Apps (Flask, Django, HTML)</li>
             <li>Human-like Automations</li>
-            <li>Interactive Dashboards (Plotly, Matplot)</li>
-            <li>Data Analysis</li>
+            <li>Interactive Dashboards (Plotly, Matplot) & Data Analysis</li>
             <li>Financial Modeling (early-stage startups, public equities)</li>
         </ul>
     </section>
-
-    <section id="stack">
-        <h2>My Stack</h2>
-        <ul>
-            <li>Mac OS</li>
-            <li>Visual Studio Code</li>
-            <li>Github</li>
-            <li>Heroku</li>
-            <li>Zoho email</li>
-            <li>Canva</li>
-        </ul>
-    </section>    
-
+ 
     <section id="portfolio">
-        <h2>Portfolio</h2>
+        <h2>Recent Work</h2>
+
+
         <div class="project">
-            <h3>Interactive Data Dashboard</h3>
+            <h3>DeliveryByte (B2B SaaS)</h3>
+            <p>AI-powered refund automation tool for restaurants. Built with Django/Heroku, saving clients £1,300+/month via LLM-driven workflows.</p>
+            <a href="https://deliverybyte.com" target="_blank">Visit Live Site</a> | 
+            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
+        </div>
+        
+        <div class="project">
+            <h3>Interactive Restaurant Operations Dashboard</h3>
             <p>A Flask/Plotly dashboard for visualizing key business metrics and market data. Helps businesses make data-driven decisions.</p>
             <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo on YouTube</a>
         </div>
         <div class="project">
-            <h3>AI Email Automation</h3>
+            <h3>DeliveryByte Refund Automation</h3>
             <p>Automated email system using AI to [briefly describe what your email automation does - e.g., "streamline communication," "personalize outreach," etc.].</p>
             <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
         </div>
