--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="skills">
         <h2>My Skills</h2>
         <ul>
-            <li>Python</li>
+            <li>Python Development (Automation, Django/Flask Web Apps, Data Analysis)</li>
             <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama) & APIs (Gemini 2.0 Pro, Qwen2.5 Max)</li>
             <li>LLMs (local DeepSeek-R1 14b, DeepSeek-R1 API, Gemini 2.0 Pro, Google Vision API, Qwen2.5Max)</li>
             <li>Web Apps (Flask, Django, HTML)</li>
