--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital.
+            I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital. <p>
+    At SFC Capital, I led investments in AI/automation startups like Axiom AI (YC W21). 
+    <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">View selected deals</a>.
+</p>
         </p>
         </p>
         <p>
@@ -66,7 +69,13 @@
     </section>-->
 
     <footer>
-        <p>&copy; 2025 Carmelo Spano'. All rights reserved.</p>
-    </footer>
+    <p>Let’s automate your workflows: <a href="mailto:your@email.com">your@email.com</a></p>
+    <p>
+        <a href="https://www.linkedin.com/in/carmelo-spano/" target="_blank">LinkedIn</a> | 
+    </p>
+    <p>&copy; 2025 Carmelo Spano'. All rights reserved.</p>
+
+</footer>
+    
 </body>
 </html>
