--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
     </section>-->
 
     <footer>
-    <p>Let’s automate your workflows: <a href="mailto:your@email.com">your@email.com</a></p>
     <p>
-        <a href="https://www.linkedin.com/in/carmelo-spano/" target="_blank">LinkedIn</a> | 
+        <a href="https://www.linkedin.com/in/carmelo-spano/" target="_blank">LinkedIn</a>
     </p>
     <p>&copy; 2025 Carmelo Spano'. All rights reserved.</p>
 
