--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <h2>About Me</h2>
         <p>
             I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootsrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital. <p>
-    At SFC Capital, I led investments in AI/automation startups like Axiom AI (YC W21). 
-    <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">View selected deals</a>.
+
+    <p>
+        <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">View selected VC deals I led/contributed to</a>.
+    </p>
 </p>
         </p>
         </p>
