--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
         <h2>My Skills</h2>
         <ul>
             <li>Python Development (Automation, Django/Flask Web Apps, Data Analysis)</li>
-            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama) & APIs (Gemini 2.0 Pro, Qwen2.5 Max)</li>
-            <li>LLMs (local DeepSeek-R1 14b, DeepSeek-R1 API, Gemini 2.0 Pro, Google Vision API, Qwen2.5Max)</li>
-            <li>Web Apps (Flask, Django, HTML)</li>
-            <li>Human-like Automations</li>
-            <li>Interactive Dashboards (Plotly, Matplot) & Data Analysis</li>
+            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.0 Pro, Qwen2.5 Max), Google Vision API</li>
             <li>Financial Modeling (early-stage startups, public equities)</li>
         </ul>
     </section>
@@ -55,13 +51,14 @@
         
         <div class="project">
             <h3>Interactive Restaurant Operations Dashboard</h3>
-            <p>A Flask/Plotly dashboard for visualizing key business metrics and market data. Helps businesses make data-driven decisions.</p>
+            <p>Flask/Plotly tool analyzing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
             <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo on YouTube</a>
         </div>
         <div class="project">
-            <h3>DeliveryByte Refund Automation</h3>
-            <p>Automated email system using AI to [briefly describe what your email automation does - e.g., "streamline communication," "personalize outreach," etc.].</p>
-            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
+            <h3>AI-Powered Refund Dispute Automation</h3>
+    <p>
+        LLM-driven system analyzing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered $1,700+/month for clients by leveraging transaction data.
+    </p>            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
         </div>
     </section>
 
