--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Carmelo Spano'</h1>
-        <p>AI Automation for SMBs & Startups</p>
+        <!-- <p>AI Automation for SMBs & Startups</p> -->
     </header>
 
     <section id="about">
