--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>My Skills</h2>
         <ul>
             <li>Python Development (Automation, Django/Flask Web Apps, Data Analysis)</li>
-            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.0 Pro, Qwen2.5 Max), Google Vision API</li>
+            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.0 Pro, Qwen2.5 Max, Google Vision API</li>
             <li>Financial Modeling (early-stage startups, public equities)</li>
         </ul>
     </section>
