--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         </p>
         <p>
-            When I'm not coding, you can find me playing tennis.
+            I recharge my batteries by playing local tennis tournaments.
         </p>
     </section>
 
