--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <div class="project">
             <h3>DeliveryByte (B2B SaaS)</h3>
             <p>AI-powered refund automation tool for restaurants. Built with Django/Heroku, saving clients £1,300+/month via LLM-driven workflows.</p>
-            <a href="https://deliverybyte.com" target="_blank">Visit Live Site</a> | 
-            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
+            <a href="https://deliverybyte.com" target="_blank">Visit Live Site</a>
         </div>
         
         <div class="project">
