--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal website of Melo Anthony, a Python developer specializing in AI automation for SMBs and startups.">
+    <meta name="description" content="Personal website of Carmelo Spano', a Python developer specializing in AI automation for SMBs and startups.">
     <title>Carmelo Spano' - AI Automation for SMBs & Startups</title>
     <link rel="stylesheet" href="style.css">
 </head>
