--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="project">
             <h3>Interactive Restaurant Operations Dashboard</h3>
             <p>Flask/Plotly tool analyzing delivery app performance. Reduced reporting time by 10+ hours/month.</p>
-            <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo on YouTube</a>
+            <a href="https://youtu.be/_IfNBvZU5DE" target="_blank">View Demo</a>
         </div>
         <div class="project">
             <h3>AI-Powered Refund Dispute Automation</h3>
