--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         </p>
         <p>
-            I recharge my batteries by playing local tennis tournaments.
+            I recharge my batteries by playing local tennis tournaments. My ITF World Tennis Number is 31.1 (~4.16 UTR/
         </p>
     </section>
 
