--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootstrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">(view selected VC deals I led/contributed to)</a>.<p>
+            I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootstrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm focused on bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital (view selected <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">VC deals</a>I led/contributed to).<p>
 
     <p>
         
