--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
         LLM-driven system analyzing delivery platform emails (Uber Eats, Deliveroo) to identify and automatically dispute unfair refunds. Recovered $1,700+/month for clients by leveraging transaction data.
     </p>            <a href="https://youtu.be/Kn3h-1XERrQ" target="_blank">View Demo</a>
         </div>
+
+
+        <div class="project">
+            <h3>Only in Italy</h3>
+        <p>Community feedback board for sharing humorous and frustrating experiences living in or traveling through Italy.</p>
+                    <a href="https://onlyinitaly.co" target="_blank">Visit Live Site</a>
+        </div>
     </section>
 
     <!--<section id="contact">
