--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section id="skills">
         <h2>My Skills</h2>
         <ul>
-            <li>Python Development (Automation, Django/Flask Web Apps, Data Analysis)</li>
-            <li>LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.5 Pro, Qwen2.5 Max, Google Vision API</li>
-            <li>Financial Modeling (early-stage startups, public equities)</li>
+            <p>-Python Development (Automation, Django/Flask Web Apps, Data Analysis)</p>
+            <p>-LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.5 Pro, Qwen2.5 Max, Google Vision API</p>
+            <p>-Financial Modeling (early-stage startups, public equities)</p>
         </ul>
     </section>
  
