--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <section id="contact">
-        <h2>Contact Me</h2>
+        <!-- <h2>Contact Me</h2> -->
         <div class="contact-form-container">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXrmdEjksbbyMo7QFB0DWMfmce5fFbvsRc_h-UuRkeN5Sxw/viewform?embedded=true" width="640" height="689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
