--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Carmelo Spano'</h1>
-        <!-- <p>AI Automation for SMBs & Startups</p> -->
+        <h2>I build profitable systems for ambitious companies.</h2>
     </header>
 
     <section id="about">
