--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
             I've been on the ground floor of scaling businesses. I helped manage growth at Deliveroo during its 600% revenue surge and was a founding team member of REEF UK, scaling its kitchen network from <b>2 to over 100 locations in 20 months</b> as revenues grew <b>920% YoY</b>. I've also evaluated hundreds of business models as a VC.
 
-            Now, I use that experience to help businesses fix operational leaks and build efficient engines for growth. I do this through hands-on consulting and by building targeted B2B software like <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a>.
+            Now, I use that experience to help businesses fix operational leaks and build efficient engines for growth. I do this through consulting and by building targeted B2B Saas software like <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a>.
             <!-- I'm a self-taught Python developer and B2B Saas founder specializing in AI-powered automations. I bootstrapped <a href="https://deliverybyte.com/" target="_blank">DeliveryByte</a> (saving restaurants $1,700+/mo via LLM workflows), and now I'm bringing custom AI solutions to a wider range of SMBs and startups. Formerly scaled Reef Technology UK from 2 to 100+ dark kitchens and led early-stage VC deals at SFC Capital (selected <a href="https://delightful-spoonbill-436.notion.site/VC-Deal-Sheet-by-Carmelo-Spano-8a598ebc175c49c1a328785d442e9c2f" target="_blank">VC deals</a> I led/contributed to).<p> -->
 
     <p>
