--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <p>
         
     </p>
-</p>
+        <h3>How I can help</h3>
+        <p>My consulting work is focused on creating tangible financial and operational results. I offer services in three core areas:</p>
+
+        <b>(1) Food delivery & last-mile logistics optimisation</b>
         </p>
         </p>
         <p>
