--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <p>My consulting work is focused on creating tangible financial and operational results. I offer services in three core areas:</p>
 
         <b>(1) Food delivery & last-mile logistics optimisation</b>
-        </p>
-        </p>
+        <p>The delivery market is defined by razor-thin margins. I help multi-location restaurants, QSRs, independent restaurant brands, and last-mile logistics firms protect their profit and expand effectively.</p>
+        <b>-What I do:</b> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your <b>commercial partnership terms</b> with aggregators and suppliers to improve your margins.
+        <b>-The result:</b> A clear, data-driven plan to increase profitability per order and secure more favourable commercial agreements.   
+
         <p>
-            I recharge my batteries by playing local tennis tournaments. My ITF World Tennis Number is 31.1 (~4.16 UTR).
+            <!-- I recharge my batteries by playing local tennis tournaments. My ITF World Tennis Number is 31.1 (~4.16 UTR). -->
         </p>
     </section>
 
