--- a/index.html
+++ b/index.html
@@ -28,22 +28,48 @@
 
         <b>(1) Food delivery & last-mile logistics optimisation</b>
         <p>The delivery market is defined by razor-thin margins. I help multi-location restaurants, QSRs, independent restaurant brands, and last-mile logistics firms protect their profit and expand effectively.</p>
-        <b>-What I do:</b> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your <b>commercial partnership terms</b> with aggregators and suppliers to improve your margins.
-        <b>-The result:</b> A clear, data-driven plan to increase profitability per order and secure more favourable commercial agreements.   
+        <p><b>-What I do:</b> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your <b>commercial partnership terms</b> with delivery apps (Deliveroo, Uber Eats, Just Eat, DoorDash, etc) and suppliers to improve your margins.</p>
+        <p><b>-The result:</b> A clear, data-driven plan to increase profitability per order and secure more favourable commercial agreements.</p>
+
+
+        <b>(2) AI & Process Automation for SMEs</b>
+        <p>For businesses generating £2M-£20M ($2.7M-$27m) a year, manual processes are a silent growth killer. I design and implement custom automation solutions to eliminate these bottlenecks. Much like when I built an automated CRM workflow at Deliveroo that <b>acquired 120+ leads a day with zero marketing spend</b>.</p>
+        <p><b>-What I do:</b> I analyse your current finance and operational workflows, identify the most costly manual tasks, and build lightweight automation tools to handle them.</p>
+        <p><b>-The result:</b> Thousands of pounds/dollars saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
+
+        <b>(3) Growth & Operations for Series A+ Startups</b>
+        <p>Post-Series A, the challenge is building a scalable organisation. Having managed deals and <b>negotiated term sheets</b> from the VC side, I help leadership navigate this phase with an investor's perspective.</p>
+        <p><b>-What I do:</b> I work with your team on market expansion strategy, financial modelling, building performance dashboards, and <b>structuring commercial partnerships</b>. I help prepare you for future funding rounds by ensuring your operational metrics and narrative are sound.</p>
+        <p><b>-The result:</b> A more resilient, efficient organisation that grows faster and negotiates from a position of strength with partners and investors.</p>
 
         <p>
             <!-- I recharge my batteries by playing local tennis tournaments. My ITF World Tennis Number is 31.1 (~4.16 UTR). -->
         </p>
     </section>
 
-    <section id="skills">
+        <h3>Experience & results</h3>
+        <p><b>-Reef Technology:</b> As a founding team member of the UK business, I was instrumental in scaling the network from <b>2 to 100+ locations in 20 months</b>, supporting <b>920% YoY revenue growth</b>. I launched major brands like Wendy's and MrBeast Burger and negotiated commercial and legal terms with national chains.</p>
+        <p><b>-Deliveroo:</b> As part of the new market launch team, I developed an automated lead-generation workflow that acquired <b>over 120 rider leads per day across 20+ cities without a marketing budget</b>, fuelling the operational capacity for hyper-growth.</p>
+        <p><b>-SFC Capital, fka Startup Funding Club:</b> As an Investment Manager, I participated in rounds for companies like <b>Axiom AI (YC-backed)</b> and led a <b>£1m ($1.34m) round for Mayku alongside notable investors</b>. I also sourced and closed the largest single LP investment in the fund's history, <b>doubling the previous record</b>. [View a selection of led/contributed deals] (coming soon)</p>
+
+        <h3>Abut me</h3>
+
+        <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 ($1,760) a month.</p>
+        <p>When I'm not working, you can usually find me on a tennis court competing in local tournaments.</p>
+
+        <h3>Get in touch</h3>
+        <p>I typically work with businesses that have a specific, costly operational problem they need to solve. If this sounds like you, I would be glad to discuss it.</p>
+        <p>Please provide a brief description of your challenge using the form below.</p>
+
+
+    <!-- <section id="skills">
         <h2>My Skills</h2>
         
             <p>-Python Development (Automation, Django/Flask Web Apps, Data Analysis)</p>
             <p>-LLM Deployment: Local (DeepSeek-R1-14b via Ollama), Gemini 2.5 Pro, Qwen2.5 Max, Google Vision API</p>
             <p>-Financial Modeling (early-stage startups, public equities)</p>
         
-    </section>
+    </section> -->
 
 
     <section id="contact">
