--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal website of Carmelo Spano', a Python developer specializing in AI automation for SMBs and startups.">
-    <title>Carmelo Spano' - AI Automation for SMBs & Startups</title>
+    
+    <meta name="description" content="Carmelo Spanò helps businesses fix operational leaks and build efficient engines for growth through consulting and custom AI automation.">
+    <title>Carmelo Spanò | Operations & Growth Consulting</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
 
         <b>(1) Food delivery & last-mile logistics optimisation</b>
         <p>The delivery market is defined by razor-thin margins. I help multi-location restaurants, QSRs, independent restaurant brands, and last-mile logistics firms protect their profit and expand effectively.</p>
-        <p><b>-What I do:</b> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your <b>commercial partnership terms</b> with delivery apps (Deliveroo, Uber Eats, Just Eat, DoorDash, etc) and suppliers to improve your margins.</p>
+        <p><strong>-What I do:</strong> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your <b>commercial partnership terms</b> with delivery apps (Deliveroo, Uber Eats, Just Eat, DoorDash, etc) and suppliers to improve your margins.</p>
         <p><b>-The result:</b> A clear, data-driven plan to increase profitability per order and secure more favourable commercial agreements.</p>
 
 
