--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p><b>-Deliveroo:</b> As part of the new market launch team, I developed an automated lead-generation workflow that acquired <b>over 120 rider leads per day across 20+ cities without a marketing budget</b>, fuelling the operational capacity for hyper-growth.</p>
         <p><b>-SFC Capital, fka Startup Funding Club:</b> As an Investment Manager, I participated in rounds for companies like <b>Axiom AI (YC-backed)</b> and led a <b>£1m ($1.34m) round for Mayku alongside notable investors</b>. I also sourced and closed the largest single LP investment in the fund's history, <b>doubling the previous record</b>. [View a selection of led/contributed deals] (coming soon)</p>
 
-        <h3>Abut me</h3>
+        <h3>About me</h3>
 
         <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 ($1,760) a month.</p>
         <p>When I'm not working, you can usually find me on a tennis court competing in local tournaments.</p>
