--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Carmelo Spanò helps businesses fix operational leaks and build efficient engines for growth through consulting and custom AI automation.">
-    <title>Carmelo Spanò | Operations & Growth Consulting</title>
+    <title>Carmelo Spanó | Operations & Growth Consulting</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Carmelo Spanò</h1>
+        <h1>Carmelo Spanó</h1>
         <h2>I build profitable systems for ambitious companies.</h2>
     </header>
 
@@ -37,7 +37,7 @@
 
             <div class="service-item">
                 <h3>(2) AI & Process Automation for SMEs</h3>
-                <p>For businesses generating £2M-£20M a year, manual processes are a silent growth killer. Much like when I built an automated CRM workflow at Deliveroo that <strong>acquired 120+ leads a day with zero marketing spend</strong>.</p>
+                <p>For businesses generating £2M-£20M/$2.7M-$27M a year, manual processes are a silent growth killer. Much like when I built an automated CRM workflow at Deliveroo that <strong>acquired 120+ leads a day with zero marketing spend</strong>.</p>
                 <p><strong>What I do:</strong> I analyse your current finance and operational workflows, identify the most costly manual tasks, and build lightweight automation tools to handle them.</p>
                 <p><strong>The result:</strong> Thousands of pounds saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
@@ -70,12 +70,12 @@
                 <div class="deal-sheet">
                     <h4>Selected Led/Contributed VC Deals:</h4>
                     <ul>
-                        <li><strong>Mayku (£1m):</strong> Led round alongside Robin Klein (LocalGlobe) for a company creating desktop vacuum forming machines for designers and creators.</li>
-                        <li><strong>Ember (£250k):</strong> Led the first round for a fintech startup automating accounting and tax for small business owners.</li>
-                        <li><strong>Swytch (£800k):</strong> Led round for the creators of the world's smallest and lightest electric bike conversion kit.</li>
+                        <li><strong>Mayku (£1M/$1.4M):</strong> Led round alongside Robin Klein (LocalGlobe) for a company creating desktop vacuum forming machines for designers and creators.</li>
+                        <li><strong>Ember (£250K/$339K):</strong> Led the first round for a fintech startup automating accounting and tax for small business owners.</li>
+                        <li><strong>Swytch (£800K/$1.1M):</strong> Led round for the creators of the world's smallest and lightest electric bike conversion kit.</li>
                         <li><strong>Axiom (YC-backed):</strong> Participated in the Seed round for a YC-backed startup that lets anyone automate web tasks without code.</li>
-                        <li><strong>PPC Protect (£125k):</strong> Led the first round for a system that prevents click fraud for companies advertising on Google Ads.</li>
-                        <li><strong>The Bunch (£149k):</strong> Led the first round for a fintech company that simplifies household bill splitting for students.</li>
+                        <li><strong>PPC Protect (£125K/$169.3K):</strong> Led the first round for a system that prevents click fraud for companies advertising on Google Ads.</li>
+                        <li><strong>The Bunch (£149K/$201.8K):</strong> Led the first round for a fintech company that simplifies household bill splitting for students.</li>
                     </ul>
                 </div>
             </div>
@@ -101,7 +101,7 @@
         <p>
             <a href="https://www.linkedin.com/in/carmelo-spano/" target="_blank">LinkedIn</a>
         </p>
-        <p>&copy; 2025 Carmelo Spanò. All rights reserved.</p>
+        <p>&copy; 2025 Carmelo Spanó. All rights reserved.</p>
     </footer>
     
 </body>
