--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="service-item">
                 <h3>(2) AI & Process Automation for SMEs</h3>
-                <p>For businesses generating £2M-£20M/$2.7M-$27M a year, manual processes are a silent growth killer. Much like when I built an automated CRM workflow at Deliveroo that <strong>acquired 120+ leads a day with zero marketing spend</strong>.</p>
+                <p>For businesses generating £2M-£20M ($2.7M-$27M) a year, manual processes are a silent growth killer. Much like when I built an automated CRM workflow at Deliveroo that <strong>acquired 120+ leads a day with zero marketing spend</strong>.</p>
                 <p><strong>What I do:</strong> I analyse your current finance and operational workflows, identify the most costly manual tasks, and build lightweight automation tools to handle them.</p>
                 <p><strong>The result:</strong> Thousands of pounds saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
@@ -65,7 +65,7 @@
 
             <div class="experience-item">
                 <h3>SFC Capital (formerly Startup Funding Club)</h3>
-                <p>As an Investment Manager, I participated in rounds for companies like <strong>Axiom AI (YC-backed)</strong> and led a <strong>£1m round for Mayku alongside notable investors</strong>. I also sourced and closed the largest single LP investment in the fund's history, <strong>doubling the previous record</strong>.</p>
+                <p>As an Investment Manager, I participated in rounds for companies like <strong>Axiom AI (YC-backed)</strong> and led a <strong>£1M ($1.35M) round for Mayku alongside notable investors</strong>. I also sourced and closed the largest single LP investment in the fund's history, <strong>doubling the previous record</strong>.</p>
                 
                 <div class="deal-sheet">
                     <h4>Selected Led/Contributed VC Deals:</h4>
@@ -83,7 +83,7 @@
 
         <section id="about-me">
             <h2>About Me</h2>
-            <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 a month.</p>
+            <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 ($1,760) a month.</p>
             <p>When I'm not working, you can usually find me on a tennis court competing in local tournaments.</p>
         </section>
 
