--- a/index-v1.html
+++ b/index-v1.html
@@ -30,24 +30,26 @@
 
             <div class="service-item">
                 <h3>(I.) For Food Delivery & Last-Mile Logistics Operators</h3>
-                <p>The delivery market is defined by razor-thin margins. I help multi-location restaurants, QSRs, and last-mile logistics firms protect their profit and expand to new markets.</p>
-                <p>You're operating on thin margins in a large, competitive market. Every percentage point matters. I help you optimize your entire delivery channel performance.</p>
-                <p><strong>What I do:</strong> I perform a deep analysis of your delivery channel performance and unit economics. I also review and help renegotiate your commercial partnership terms with delivery apps and partners to improve your margins.</p>
+                <p>You're operating on thin margins in a large, competitive market. Every percentage point matters. I help you optimise your delivery channel performance. I help multi-location restaurants, QSRs, and last-mile logistics firms protect their profit and expand to new markets.</p>
+                <p><strong>Service:</strong> In-app promotional and ads strategy, menu and store-front optimisation, revenue and customer performance analysis, and troubleshooting operational leaks. I also review and help renegotiate your commercial partnership terms with delivery apps and partners to improve your margins.</p>
+                <p><strong>Past Example:</strong> At Wingstop, we identified that one of the best-selling item was misaligned with their core branding, leading to a simple but powerful shift in operational focus which lead to a decrease in delivery service fees.
                 <p><strong>The result:</strong> A clear, data-driven plan to increase profitability and secure more favourable commercial agreements.</p>
             </div>
 
             <div class="service-item">
-                <h3>(II.) AI & Process Automation for SMEs</h3>
-                <p>For businesses generating £2M-£20M ($2.7M-$27M) a year, manual, boring, processes are a silent growth killer. Much like when I built an automated CRM workflow at Deliveroo that <strong>acquired 120+ leads a day with zero marketing spend</strong>.</p>
-                <p><strong>What I do:</strong> I analyse your current finance and operational workflows, identify the most costly manual tasks, and build lightweight automation tools to handle them.</p>
-                <p><strong>The result:</strong> Thousands of pounds saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
+                <h3>(II.) For SMEs (£2M-£20M/$2M-$20M Revenue) with Manual Processes</h3>
+                <p>Your team is wasting hours on repetitive, manual, boring tasks. They are a silent growth killer, it slows you down and costs you money. I design and build custom AI-powered workflows to automate these processes.</p>
+                <p><strong>Service:</strong> I'll analyse your current operations, identify the most impactful automation opportunities, and build a custom solution (typically in Python) to handle tasks like data entry, report generation, dynamic dashboards, customer support triage, market monitoring, or invoice processing.</p>
+                <p><strong>My Own Proof:</strong> I built <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, a SaaS that uses AI to automatically analse refunds from delivery apps and recover over £1,300 ($1,760) a monnth for restaurant clients Like Going Greek and Que Ricos Fresh Mexican Kitchen.</p>
+                <p><strong>Result:</strong> Thousands of pounds saved in labour costs and hundreds of hours returned to your team to focus on high-value work.</p>
             </div>
 
             <div class="service-item">
-                <h3>(III.) Growth & Operations for Series A+ Startups</h3>
-                <p>Post-Series A, the challenge is building a scalable organisation. Having managed deals and <strong>negotiated term sheets</strong> from the VC side, I help leadership navigate this phase with an investor's perspective.</p>
-                <p><strong>What I do:</strong> I work with your team on market expansion strategy, financial modelling, building performance dashboards, and structuring commercial partnerships.</p>
-                <p><strong>The result:</strong> A more resilient, efficient organisation that grows faster and negotiates from a position of strength with partners and investors.</p>
+                <h3>(III.) For VC-Backed Startups (Series A+) Needing to Scale</h3>
+                <p>You have product-market fit and funding, but your operations are under the pressure of growth. You need scalable systems, yesterday. Having managed deals and <strong>negotiated term sheets</strong> from the VC side, I help leadership navigate this phase with an investor's perspective.</p>
+                <p><strong>Service:</strong> I act as an interim Head of Growth, Ops, or Revenue Operations. I come in to build the dashboards, define the KPIs, and implement the processes you need to scale from 10 to 100 people without everything catching fire.</p>
+                <p><strong>Past Experience:</strong> I was on the ground during Deliveroo's 600%+ hyper-growth phase, scaling the UK's rider fleet. At Reef Technology, I helped scale the UK kitchen network from 2 to over 100 sites, launching global brands like Wendy's and MrBeast Burgers.</p>
+                <p><strong>Result:</strong> You get a more resilient, efficient organisation that grows faster and negotiates from a positionf of strenght with partners and investors.</p>                
             </div>
         </section>
 
@@ -86,15 +88,20 @@
             <h2>About Me</h2>
             <p>I am a founder and a builder. I created <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, an AI-powered tool that automatically recovers incorrect refunds for restaurants, saving them over £1,300 ($1,760) a month.</p>
             <p>When I'm not working, you can usually find me on a tennis court competing in local tournaments.</p>
+            <p>My career has been an ongoing obsession with one question: what makes a company built to last actually work? I started at **Deliveroo**, learning how to build and scale operations from the ground up during a period of explosive growth.</p>
+            <p>I then moved into Venture Capital at **SFC Capital**, where I analsed hundreds of business models a year. I saw firsthand why most startups fail and what the winners do differently. I learned to spot operational weaknesses and opportunities from an investor's perspective.</p>
+            <p>At **Reef Technology**, I combined those skills, taking on a senior commercial role where I negotiated deals with major brands (like Island Poké, Coco di Mama, GBK, MrBeast Burgers, Wendy's and many more), modeled expansion plans for multi-million dollar investments, and managed the operational performance of our delivery kitchen network.</p>
+            <p>Today, I run my own profitable B2B SaaS app, <a href="https://deliverybyte.com" target="_blank">DeliveryByte</a>, and use my experience to help other businesses grow.</p>
         </section>
 
         <section id="contact">
-            <h2>Get In Touch</h2>
-            <p>I typically work with businesses that have a specific, costly operational problem they need to solve. If this sounds like you, I would be glad to discuss it.</p>
-            <p>Please provide a brief description of your challenge using the form below.</p>
+            <h2>Have a problem I might be able to solve? Get in touch!</h2>
+            <p>Send me a brief note about the challenge you're facing.</p>
             <div class="contact-form-container">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScKXrmdEjksbbyMo7QFB0DWMfmce5fFbvsRc_h-UuRkeN5Sxw/viewform?embedded=true" width="100%" height="689" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
+            <p><b>P.S.</b>I play tennis. If you are really good, consider teaching me how to serve faster. If you are so-so, let's play a competitive game, my current level is intermediate/upper intermediate (UK's ITF 31.1/US' UTR 4.6). If you are thinking about starting out, in 2 hours I can teach you the forehand and backhand basics..</p>
+
         </section>
     </main>
 
@@ -102,6 +109,8 @@
         <p>
             <a href="https://www.linkedin.com/in/carmelo-spano/" target="_blank">LinkedIn</a>
         </p>
+        <p></p>
+        <p></p>
         <p>&copy; 2025 Carmelo Spanó. All rights reserved.</p>
     </footer>
     
